# town-of-jupiter-fl-cli

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/tojfl-cli/: Cargo.toml
crates/tojfl-cli/src/: cli.rs  commands.rs  main.rs  output.rs  selfupdate.rs
crates/tojfl-sdk/: Cargo.toml
crates/tojfl-sdk/src/: accounts.rs  auth.rs  client.rs  config.rs  dnn.rs  error.rs  lib.rs  model.rs  pages.rs  payment.rs  scrape.rs  session.rs  usage.rs
docs/: development.md  portal.md
