[workspace]
resolver = "2"
members = [
    "crates/tojfl-sdk",
    "crates/tojfl-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
repository = "https://github.com/piekstra/town-of-jupiter-fl"
authors = ["piekstra"]

[workspace.dependencies]
# native-tls (OS TLS stack) is REQUIRED, not a preference: the portal is an old
# server that offers only CBC-mode TLS 1.2 cipher suites (e.g. ECDHE-RSA-AES256-
# SHA384) with no AEAD/GCM suites and no TLS 1.3. rustls only implements AEAD
# ciphers, so it cannot complete the handshake; native-tls uses SecureTransport/
# SChannel/OpenSSL, which still support CBC and connect fine.
reqwest = { version = "0.12", features = ["blocking", "cookies", "gzip", "native-tls"], default-features = false }
scraper = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
thiserror = "2"
anyhow = "1"
url = "2"
directories = "5"
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native"] }
rpassword = "7"
toml = "0.8"
comfy-table = "7"
regex = "1"
# native-tls here too (matches the portal client and GitHub speaks modern TLS).
self_update = { version = "0.42", features = ["archive-tar", "compression-flate2"] }

[profile.release]
strip = true
lto = "thin"
